--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,12 @@ version = "0.1.0"
 description = "Swarm parallel memoization with chunked caching."
 readme = "README.md"
 requires-python = ">=3.10"
+dependencies = [
+    "flaky>=3.8.1",
+]
 
 [project.optional-dependencies]
-test = ["pytest"]
+test = ["pytest", "flaky>=3.8.1"]
+
+[tool.pytest.ini_options]
+markers = ["flaky: rerun flaky tests"]
