--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
+dependencies = [
+    "joblib>=1.5.3",
+]
 
 [project.optional-dependencies]
 test = ["pytest", "flaky>=3.8.1"]
