--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "swarm-memo"
+name = "shard-memo"
 version = "0.1.0"
-description = "Swarm parallel memoization with chunked caching."
+description = "Sharded memoization with chunked caching."
 readme = "README.md"
 requires-python = ">=3.10"
 license = { file = "LICENSE" }
@@ -29,17 +29,17 @@ dependencies = [
 test = ["pytest", "flaky>=3.8.1"]
 
 [project.urls]
-Repository = "https://github.com/msf235/swarm-memo"
+Repository = "https://github.com/msf235/shard-memo"
 
 [tool.pytest.ini_options]
 markers = ["flaky: rerun flaky tests"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["swarm_memo"]
+packages = ["shard_memo"]
 
 [tool.hatch.build.targets.sdist]
 include = [
-    "swarm_memo/**",
+    "shard_memo/**",
     "README.md",
     "LICENSE",
     "pyproject.toml",
