--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,11 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
-dependencies = [
-    "joblib>=1.5.3",
-]
+dependencies = []
 
 [project.optional-dependencies]
 test = ["pytest", "flaky>=3.8.1"]
+bench = ["joblib>=1.5.3"]
 
 [project.urls]
 Repository = "https://github.com/msf235/shard-memo"
